Fix input area overflow

--- a/style.css
+++ b/style.css
@@ -27,8 +27,11 @@ body {
     display: flex;
     flex-direction: column;
     align-items: auto;
-    /* Adding red for debug purposes
-    background-color: red; */
+}
+
+.form-group {
+    margin: 0.5rem 0 0.5rem 0;
+    box-sizing: border-box;
 }
 
 .container {
@@ -87,10 +90,6 @@ main {
     margin-bottom: 2rem;
 }
 
-.form-group {
-    margin: 0.5rem 0 0.5rem 0;
-}
-
 .flex-column {
     display: flex;
     flex-direction: column;
@@ -116,13 +115,15 @@ input[type="checkbox"] {
 
 input[type="text"], input[type="email"], input[type="number"], button[type="submit"] {
     all: unset;
-    padding: 10px;
-    width: 93%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 100%;
     height: 1rem;
     border-style: solid;
     border-radius: 5px;
     border-width: 2px;
     align-items: center;
+    box-sizing: inherit;
 }
 
 select {
@@ -138,6 +139,7 @@ textarea {
     border-style: solid;
     border-radius: 5px;
     border-width: 2px;
+    box-sizing: inherit;
 }
 
 label {
